--- a/templates/admin/shop.html.twig
+++ b/templates/admin/shop.html.twig
@@ -1,20 +1,19 @@
 {% extends "base.html.twig" %}
 
+{% block metatitle %}
+    {{ shop.title }} | Skateboard Social Club
+{% endblock metatitle %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/search.css') }}">
 {% endblock stylesheets %}
-
-{% block metatitle %}
-    Clubs | Skateboard Social Club
-{% endblock metatitle %}
 
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Club"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/club.png') }}" alt="Club-icon"></div>
+            <div class="element"><img class="titre logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops_titre.png') }}" alt="shops"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops.png') }}" alt="shops-icon"></div>
         </div>
         <div class="line"></div>
         <div class="">
@@ -36,23 +35,26 @@
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.6974937602668!2d-0.5611412842345931!3d44.84809358236132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1650801288770!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
+
+                {#        <div class="book-image">#}
+                {#            <img class="book-image" src="{{ book.image }}" title="{{ book.title }}" alt="photo de la couverture du livre">#}
+                {#        </div>#}
         </article>
     </section>
     <section class="section">
-            {% for club in clubs %}
-                <div class="card">
-                    <div class="card-text">
-                        <h1>{{ club.title }}</h1>
-                        {#  <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt=""> #}
-                        <h2>{{ club.description}}</h2>
-                        <h3>{{ club.town}}</h3>
-                        <h3>{{ club.area}}</h3>
-                        {#             {% if skatepark.club %} #}
-                        {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
-                        {#                    {% endif %} #}
-                    </div>
-                    <a class="link" href="{{ path('club', {"id": club.id}) }}">Voir le club</a>
-                </div>
-            {% endfor %}
-        </section>
-{% endblock main%}
+        <article>
+            <div class="card-text">
+                <h1>{{ shop.title }}</h1><br>
+                <h3>{{ shop.description }}</h3><br>
+                <h3>{{ shop.address }}</h3><br>
+                <h3>{{ shop.town }}</h3><br>
+                <h3>{{ shop.area }}</h3><br>
+                {# {% if club.skatepark %} #}
+                 {#     <h3>{{ club.skatepark.town }} {{ club.skatepark.area }}</h3> #}
+                 {#  {% endif %} #}
+            </div>
+            <a class="link" href="{{ path('admin_shop_update', {"id": shop.id}) }}">Modifier le shop</a>
+            <a class="link" href="{{ path('shop_delete', {"id": shop.id}) }}">Supprimer le shop</a>
+        </article>
+    </section>
+{% endblock main %}
