--- a/templates/admin/shops.html.twig
+++ b/templates/admin/shops.html.twig
@@ -3,18 +3,17 @@
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
-    <link rel="stylesheet" href="{{ asset('css/search.css') }}">
 {% endblock stylesheets %}
 
 {% block metatitle %}
-    Clubs | Skateboard Social Club
+    Shops | Skateboard Social Club
 {% endblock metatitle %}
 
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/clubs_titre.png') }}" alt="Club"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/club.png') }}" alt="Club-icon"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops_titre.png') }}" alt="shops"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('shops') }}" src="{{ asset('icon/shops.png') }}" alt="shops-icon"></div>
         </div>
         <div class="line"></div>
         <div class="">
@@ -22,7 +21,6 @@
                 <div id="divSearch">
                     <div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
                     <div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div>
-                    {% block search %}{% endblock search %}
                 </div>
             </form>
         </div>
@@ -39,20 +37,26 @@
         </article>
     </section>
     <section class="section">
-            {% for club in clubs %}
+        <article>
+            {% for shop in shops %}
                 <div class="card">
                     <div class="card-text">
-                        <h1>{{ club.title }}</h1>
-                        {#  <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt=""> #}
-                        <h2>{{ club.description}}</h2>
-                        <h3>{{ club.town}}</h3>
-                        <h3>{{ club.area}}</h3>
-                        {#             {% if skatepark.club %} #}
-                        {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
-                        {#                    {% endif %} #}
+                        <h1>{{ shop.title }}</h1>
+                        {#     <img src="{{ asset('uploads/cover/'~shop.coverFilename) }}" alt=""> #}
+                        <h2>{{ shop.description}}</h2>
+                        <h3>{{ shop.town}}</h3>
+                        <h3>{{ shop.area}}</h3>
+                        {#     {% if shop.skatepark %} #}
+                        {#         <h3>{{ shop.skatepark.town }} {{ shop.skatepark.area }}</h3> #}
+                        {#     {% endif %} #}
                     </div>
-                    <a class="link" href="{{ path('club', {"id": club.id}) }}">Voir le club</a>
+
+                    <a class="link" href="{{ path('admin_shop', {"id": shop.id}) }}">Voir le shop</a>
+                    <a class="link" href="{{ path('admin_shop_create', {"id": shop.id}) }}">Créer un shop</a>
+                    <a class="link" href="{{ path('admin_shop_update', {"id": shop.id}) }}">Modifier le shop</a>
+                    <a class="link" href="{{ path('admin_shop_delete', {"id": shop.id}) }}">Supprimer le shop</a>
                 </div>
             {% endfor %}
-        </section>
+        </article>
+    </section>
 {% endblock main%}
