--- a/templates/admin/skatepark.html.twig
+++ b/templates/admin/skatepark.html.twig
@@ -1,19 +1,19 @@
 {% extends "base.html.twig" %}
 
+{% block metatitle %}
+    {{ skatepark.title }} | Skateboard Social Club
+{% endblock metatitle %}
+
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
 {% endblock stylesheets %}
 
-{% block metatitle %}
-    Skateparks | Skateboard Social Club
-{% endblock metatitle %}
-
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="title logoBig" href="{{ path('sessions') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="Skatepark"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('sessions') }}" src="{{ asset('icon/skateparks.png') }}" alt="Skatepark-icon"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="Club"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="Club-icon"></div>
         </div>
         <div class="line"></div>
         <div class="">
@@ -36,21 +36,33 @@
             </div>
         </article>
     </section>
-    <section class="section">
-        {% for skatepark in skateparks %}
-            <div class="card">
-                <div class="card-text">
-                    <h1>{{ skatepark.title }}</h1>
-                    {#  <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt=""> #}
-                        <h2>{{ skatepark.description}}</h2>
-                        <h3>{{ skatepark.town}}</h3>
-                        <h3>{{ skatepark.area}}</h3>
-                    {#             {% if skatepark.club %} #}
-                    {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
-                    {#                    {% endif %} #}
-                </div>
-                <a class="link" href="{{ path('skatepark', {"id": skatepark.id}) }}">Voir le skatepark</a>
+    <section>
+        <article class="book-detail">
+            <!--<div>
+                <form>
+                    <img src="{ asset('icon/loupe.png') }}" alt="loupe" class="logo">
+                    <input type="search" name="q" placeholder="Rechercher">
+                    <input type="submit" value="Lancer !">
+                </form>
             </div>
-        {% endfor %}
+            -->
+            <div class="card-text">
+                <h1>{{ skatepark.title }}</h1><br>
+                <h3>{{ skatepark.address }} {{ skatepark.town }}</h3>
+                <div class="container">
+                    <img src="{{ asset('uploads/darwin.jpg') }}" alt="map" style="width:100%;">
+                </div>
+            </div>
+            <div class="card-text">
+                <h1>{{ skatepark.title }}</h1>
+                <h3>{{ skatepark.description }}</h3>
+                <h3>{{ skatepark.address }}</h3>
+                <h3>{{ skatepark.town }}</h3>
+
+                {#  {% for club in skatepark.clubs %} #}
+                {#    <p>{{ club.title }}</p> #}
+                {#    {% endfor %} #}
+            </div>
+        </article>
     </section>
-{% endblock main%}
+{% endblock main %}
