--- a/templates/front/session.html.twig
+++ b/templates/front/session.html.twig
@@ -1,7 +1,7 @@
-{% extends "base.html.twig" %}
+{% extends "front/base.html.twig" %}
 
 {% block metatitle %}
-    {{ skatepark.title }} | Skateboard Social Club
+    {{ session.title }} | Skateboard Social Club
 {% endblock metatitle %}
 
 {% block stylesheets %}
@@ -12,8 +12,8 @@
 {% block main %}
     <section class="">
         <div id="ico">
-            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks_titre.png') }}" alt="Club"></div>
-            <div class="element"><img class="title logoBig" href="{{ path('skateparks') }}" src="{{ asset('icon/skateparks.png') }}" alt="Club-icon"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/sessions_titre.png') }}" alt="Club"></div>
+            <div class="element"><img class="title logoBig" href="{{ path('clubs') }}" src="{{ asset('icon/session.png') }}" alt="Club-icon"></div>
         </div>
         <div class="line"></div>
         <div class="">
@@ -34,34 +34,36 @@
             <div>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.6974937602668!2d-0.5611412842345931!3d44.84809358236132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1650801288770!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
+            {#        <div class="book-image">#}
+            {#            <img class="book-image" src="{{ book.image }}" title="{{ book.title }}" alt="photo de la couverture du livre">#}
+            {#        </div>#}
         </article>
     </section>
-    <section>
-        <article class="book-detail">
-            <!--<div>
-                <form>
-                    <img src="{ asset('icon/loupe.png') }}" alt="loupe" class="logo">
-                    <input type="search" name="q" placeholder="Rechercher">
-                    <input type="submit" value="Lancer !">
-                </form>
-            </div>
-            -->
+    <section class="section">
+        <article>
             <div class="card-text">
-                <h1>{{ skatepark.title }}</h1><br>
-                <h3>{{ skatepark.address }} {{ skatepark.town }}</h3>
-                <div class="container">
-                    <img src="{{ asset('uploads/darwin.jpg') }}" alt="map" style="width:100%;">
-                </div>
-            </div>
-            <div class="card-text">
-                <h1>{{ skatepark.title }}</h1>
-                <h3>{{ skatepark.description }}</h3>
-                <h3>{{ skatepark.address }}</h3>
-                <h3>{{ skatepark.town }}</h3>
-
+                <h1>{{ session.title }}</h1><br>
+                <h3>{{ session.description }}</h3><br>
+                <h3>{{ session.address }}</h3><br>
+                <h3>{{ session.town }}</h3><br>
+                <h3>{{ session.area }}</h3><br>
+                {% if session.startAt %}
+                    <h3>La session est commencé depuis: {{ session.startAt  | date("Y-m-d H:i:s" ) |format_datetime('full', 'short', locale='fr') }}</h3>
+                {% else %}
+                    <h3>La session n'est pas commencé </h3>
+                {% endif %}
+                {% if session.finishedAt %}
+                    <h3>La session est finie depuis: {{ session.finishedAt  | date("Y-m-d H:i:s") |format_datetime('full', 'short', locale='fr') }}</h3>
+                {% else %}
+                    <h3>La session n'est pas finie </h3>
+                {% endif %}
                 {#  {% for club in skatepark.clubs %} #}
                 {#    <p>{{ club.title }}</p> #}
                 {#    {% endfor %} #}
+
+                {#  {% if club.skatepark %}  #}
+                {#   <h3>{{ club.skatepark.town }} {{ club.skatepark.area }}</h3> #}
+                {#{% endif %} #}
             </div>
         </article>
     </section>
