--- a/templates/admin/clubs.html.twig
+++ b/templates/admin/clubs.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "admin/base.html.twig" %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
@@ -18,26 +18,17 @@
         </div>
         <div class="line"></div>
         <div class="">
-            <form>
-                <div id="divSearch">
-                    <div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
-                    <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal"></div>
-                    {#<div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div> #}
-                     {#<div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div> #}
-                </div>
-            </form>
-            <form action="{{ path('admin_search_clubs') }}">
-                <div class="">
-
-                    <div class="btn">
-                        <img class="logo" src="{{ asset('icon/loupe.png') }}" alt="loupe">
-                        <input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+            {% block search %}
+                <form action="{{ path('admin_search_clubs') }}">
+                    <div id="divSearch">
+                        <div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
+                        <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal"></div>
                         <input type="submit">
+                        {#<div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div> #}
+                         {#<div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div> #}
                     </div>
-
-                    {% block search %}{% endblock search %}
-                </div>
-            </form>
+                </form>
+            {% endblock search %}
         </div>
         <div class="line">
         </div>
@@ -47,7 +38,7 @@
             <article class="">
             </article>
             <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2828.6974937602668!2d-0.5611412842345931!3d44.84809358236132!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd55262a0604501b%3A0x57782374d796fd66!2sHangar%20Darwin%20Skatepark!5e0!3m2!1sfr!2sfr!4v1650801288770!5m2!1sfr!2sfr" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d45267.45075272003!2d-0.571391187931922!3d44.837541008065486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sskatepark%20bordeaux!5e0!3m2!1sfr!2sfr!4v1653259114005!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </article>
     </section>
