--- a/templates/admin/clubs_search.html.twig
+++ b/templates/admin/clubs_search.html.twig
@@ -1,17 +1,14 @@
-{% extends 'base.html.twig' %}
-
+{% extends "admin/base.html.twig" %}
 
 {% block metatitle %}
     Recherche  | Skateboard Social Club
 {% endblock metatitle %}
-
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
     <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
     <link rel="stylesheet" href="{{ asset('css/search.css') }}">
 {% endblock stylesheets %}
-
 
 {% block title %}
     searching result
