--- a/templates/admin/session.html.twig
+++ b/templates/admin/session.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "admin/base.html.twig" %}
 
 {% block metatitle %}
     {{ session.title }} | Skateboard Social Club
