--- a/templates/admin/skatepark_create.html.twig
+++ b/templates/admin/skatepark_create.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends "admin/base.html.twig" %}
 
 {% block metatitle %}
     Créer un Skatepark | Skateboard Social Club
