--- a/templates/admin/skateparks_search.html.twig
+++ b/templates/admin/skateparks_search.html.twig
@@ -1,5 +1,4 @@
-{% extends 'base.html.twig' %}
-
+{% extends "admin/base.html.twig" %}
 
 {% block metatitle %}
     Recherche  | Skateboard Social Club
