--- a/templates/burger.html.twig
+++ b/templates/burger.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "front/base.html.twig" %}
 
 {% block stylesheets %}
     <link rel="stylesheet" href="{{ asset('css/details.css') }}">
