--- a/templates/front/club.html.twig
+++ b/templates/front/club.html.twig
@@ -1,4 +1,4 @@
-{% extends "base.html.twig" %}
+{% extends "front/base.html.twig" %}
 
 {% block metatitle %}
     {{ club.title }} | Skateboard Social Club
