--- a/templates/admin/club_create.html.twig
+++ b/templates/admin/club_create.html.twig
@@ -14,8 +14,8 @@
     <section class="section">
         <div class="detail">
             <div class="justify-between flex fdr">
-                <div class="flex">
-                    {{ form(clubForm)}}
+                <div class="flex pad10">
+                    {{ form(clubForm) }}
                 </div>
             </div>
         </div>
