--- a/templates/admin/session_create.html.twig
+++ b/templates/admin/session_create.html.twig
@@ -16,6 +16,41 @@
             <div class="justify-between flex fdr">
                 <div class="flex">
                     {{ form(sessionForm)}}
+                    {{ form_start(sessionForm) }}
+
+                    {{ form_label(sessionForm.title, 'titre', {
+                        'label_attr': {
+                            'class': 'testLabelClass'
+                        }
+                    }) }}
+
+                    {{ form_widget(sessionForm.title, {
+                        'attr': {
+                            'class': 'testClass'
+                        }
+                    }) }}
+
+                    {{ form_label(sessionForm.description) }}
+                    {{ form_widget(sessionForm.description) }}
+
+                    {{ form_label(sessionForm.address) }}
+                    {{ form_widget(sessionForm.address) }}
+
+                    {{ form_label(sessionForm.zippcode) }}
+                    {{ form_widget(sessionForm.zippcode) }}
+
+                    {{ form_label(sessionForm.town) }}
+                    {{ form_widget(sessionForm.town) }}
+
+                    {{ form_label(sessionForm.area) }}
+                    {{ form_widgetsessionbForm.area) }}
+
+                    {{ form_label(sessionForm.coverfilename) }}
+                    {{ form_widget(sessionForm.coverfilename) }}
+
+                    {{ form_widget(sessionForm.submit) }}
+
+                    {{ form_end(sessionForm) }}
                 </div>
             </div>
         </div>
