--- a/templates/admin/shop.html.twig
+++ b/templates/admin/shop.html.twig
@@ -54,7 +54,7 @@
                  {#  {% endif %} #}
             </div>
             <a class="link" href="{{ path('admin_shop_update', {"id": shop.id}) }}">Modifier le shop</a>
-            <a class="link" href="{{ path('shop_delete', {"id": shop.id}) }}">Supprimer le shop</a>
+            <a class="link" href="{{ path('admin_shop_delete', {"id": shop.id}) }}">Supprimer le shop</a>
         </article>
     </section>
 {% endblock main %}
