--- a/templates/admin/club_update.html.twig
+++ b/templates/admin/club_update.html.twig
@@ -1,8 +1,24 @@
 {% extends "admin/base.html.twig" %}
 
+{% block metatitle %}
+    Modifier un Club | Skateboard Social Club
+{% endblock metatitle %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('css/details.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/burger.css') }}">
+    <link rel="stylesheet" href="{{ asset('css/search.css') }}">
+{% endblock stylesheets %}
+
 {% block main %}
-
-    <p>Le club a été mis à jour</p>
-
+    <section class="section">
+        <div class="detail">
+            <div class="justify-between flex fdr">
+                <div class="flex">
+                    {{ form(clubForm) }}
+                </div>
+            </div>
+        </div>
+    </section>
 {% endblock main %}
 
