--- a/templates/admin/clubs.html.twig
+++ b/templates/admin/clubs.html.twig
@@ -18,17 +18,16 @@
         </div>
         <div class="line"></div>
         <div class="">
-            {% block search %}
                 <form action="{{ path('admin_search_clubs') }}">
                     <div id="divSearch">
-                        <div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
+                        <div class="btn logo icon"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
                         <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal"></div>
                         <input type="submit">
                         {#<div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div> #}
                          {#<div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div> #}
                     </div>
                 </form>
-            {% endblock search %}
+            {% block search %} {% endblock search %}
         </div>
         <div class="line">
         </div>
@@ -38,28 +37,34 @@
             <article class="">
             </article>
             <div>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d45267.45075272003!2d-0.571391187931922!3d44.837541008065486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1sskatepark%20bordeaux!5e0!3m2!1sfr!2sfr!4v1653259114005!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </div>
-        </article>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d22633.81659527818!2d-0.5881872095058547!3d44.83730877971263!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1secole%20skateboard%20bordeaux!5e0!3m2!1sfr!2sfr!4v1653350068064!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>        </article>
     </section>
     <section class="section">
+        <h3 class="al"> Aller à :</h3>
             {% for club in clubs %}
-                <div class="card">
                     <div class="card-text">
+                        <div class="card-t">
                         <h1>{{ club.title }}</h1>
-                        {#  <img src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt=""> #}
-                        <h2>{{ club.description}}</h2>
-                        <h3>{{ club.town}}</h3>
-                        <h3>{{ club.area}}</h3>
+                        </div>
+                            <div id="abs5" class="absolute ban" alt="banner-address">
+                                <h2>{{ club.address}} {{ club.town}}</h2>
+                            </div>
+                            <div id="sta1" class="static">
+                                <b>
+                                    <img class="img-card" src="{{ asset('uploads/cover/'~club.coverFilename) }}" alt="photo-club">
+                                </b>
+                            </div>
+
                         {#             {% if skatepark.club %} #}
                         {#                        <h3>{{ skatepark.club.town }} {{ skatepark.club.area }}</h3> #}
                         {#                    {% endif %} #}
                     </div>
-                    <a class="link" href="{{ path('admin_club', {"id": club.id}) }}">Voir le club</a>
-                    <a class="link" href="{{ path('admin_club_create', {"id": club.id}) }}">Créer un club</a>
-                    <a class="link" href="{{ path('admin_club_update', {"id": club.id}) }}">Modifier un club</a>
-                    <a class="link" href="{{ path('admin_club_delete', {"id": club.id}) }}">Supprimer le club</a>
-                </div>
+                    <ul class="adm-btn">
+                        <li><a id="link1" class="pad5" href="{{ path('admin_club', {"id": club.id}) }}"><img src="{{ asset('icon/open-blue.png') }}" alt="Voir le club"><br><h4>Voir le club</h4></a></li>
+                        <li><a id="link2" class="pad5" href="{{ path('admin_club_create', {"id": club.id}) }}"><img src="{{ asset('icon/add-file-green.png') }}" alt="Créer un club"><br><h4>Créer un club</h4></a></li>
+                        <li><a id="link3" class="pad5" href="{{ path('admin_club_update', {"id": club.id}) }}"><img src="{{ asset('icon/edit-pink.png') }}" alt="Modifier un club"><br><h4>Modifier un club</h4></a></li>
+                        <li><a id="link4" class="pad5" href="{{ path('admin_club_delete', {"id": club.id}) }}"><img src="{{ asset('icon/delete-orange.png') }}" alt="Supprimer le club"><br><h4>Supprimer le club</h4></a></li>
+                    </ul>
             {% endfor %}
         </section>
 {% endblock main%}
