--- a/templates/admin/skateparks.html.twig
+++ b/templates/admin/skateparks.html.twig
@@ -17,18 +17,20 @@
         </div>
         <div class="line"></div>
         <div class="">
-            {% block search %}
-                <form action="{{ path('admin_search_skateparks') }}">
-                    <div id="divSearch">
-                        <div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div>
-                        <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal"></div>
-                        <input type="submit">
-                        {#<div class="btn logo"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label></div> #}
-                        {#<div class="btn"><input type="text" id="userId" name="userId" placeholder="Ville, Code postal"></div> #}
-                    </div>
-                </form>
-            {% endblock search %}
-        </div>
+            <div class="">
+                {% block search %}
+                    <form action="{{ path('admin_search_skateparks') }}">
+                        <article class="detail">
+                            <div class="card-text" id="divSearch">
+                                <div class="btn logo icon"><label for="userId"><img src="{{ asset('icon/loupe.png') }}" alt="loupe"></label>
+                                </div>
+                                <div class="btn"><input type="text" id="userId" name="query" placeholder="Ville, Code postal">
+                                </div>
+                            </div>
+                        </article>
+                    </form>
+                {% endblock search %}
+            </div>
         <div class="line"></div>
     </section>
     <section class="section">
