--- a/templates/login/index.html.twig
+++ b/templates/login/index.html.twig
@@ -18,7 +18,7 @@
     <section class="section">
 
         <div class="detail">
-            <div class="">
+            <div class="card-text">
                 <form action="{{ path('login') }}" method="post">
 
                     <label for="username">Email:</label>
